Modifies view and adds new route

--- a/views/fruits/index.liquid
+++ b/views/fruits/index.liquid
@@ -6,7 +6,7 @@
     <div>
         {% for fruit in fruits %}
             <article>
-                <a href="">
+                <a href="/fruits/{{ fruit.id }}">
                     <h2>
                         {{ fruit.name }}
                         {% if fruit.readyToEat %}
