--- a/views/fruits/index.liquid
+++ b/views/fruits/index.liquid
@@ -4,6 +4,7 @@
 <!-- Start block content -->
 {% block content %}
     <div>
+        <a href="/fruits/new">Create a new fruit</a>
         {% for fruit in fruits %}
             <article>
                 <a href="/fruits/{{ fruit.id }}">
