--- a/views/fruits/show.liquid
+++ b/views/fruits/show.liquid
@@ -10,7 +10,11 @@
                     Not Ready to Eat
                 {% endif %}
             </h2>
-            <h3>{{ fruit.color }}</h3>
+            <h3>Color: {{ fruit.color }}</h3>
+            <a href="/fruits/{{ fruit.id }}/edit"><button>Edit</button></a>
+            <form action="/fruits/{{ fruit.id }}?_method=DELETE" method="POST">
+                <input type="submit" value="Delete Fruit">
+            </form>
         </article>
     </div>
 {% endblock %}
