--- a/views/fruits/new.liquid
+++ b/views/fruits/new.liquid
@@ -1,36 +1,33 @@
-{% layout "layout.liquid" %}
+{% layout 'layout.liquid' %}
 {% block content %}
-    <div>
+    <div class="container-sm">
         <form action="/fruits" method="POST">
             <fieldset>
                 <legend>Create New Fruit</legend>
-                <label>
-                    Name:
-                    <input
-                        type="text"
+                <label class="form-label">Name: </label>
+                    <input 
+                        type="text" 
                         name="name"
-                        placeholder="Enter fruit name"
+                        placeholder="enter fruit name"
+                        class="form-control"
                     >
-                </label>
-                <label>
-                    Color:
-                    <input
-                        type="text"
-                        name="color"
-                        placeholder="Enter fruit color"
+                <label class="form-label">Color:</label>
+                    <input 
+                        type="text" 
+                        name="color" 
+                        placeholder="enter fruit color"
+                        class="form-control"
                     >
-                </label>
-                <label>
-                    Ready To Eat:
-                    <input
-                        type="checkbox"
+                <label class="form-label">Ready To Eat:</label>
+                    <input 
+                        type="checkbox" 
                         name="readyToEat"
+                        class="form-check-input"
                     >
-                </label>
             </fieldset>
-            <input
-                type="submit"
-                value="Create new fruit"
+            <input 
+                type="submit" 
+                value="Create New Fruit"
             >
         </form>
     </div>
