--- a/views/fruits/show.liquid
+++ b/views/fruits/show.liquid
@@ -1,6 +1,8 @@
-{% layout "layout.liquid" %}
+{% layout 'layout.liquid' %}
 {% block content %}
-    <div>
+    <div class="container-md">
+        <!-- you can do fun things like inline style with properties of your rendered object -->
+        <!-- <article style="background-color:{{fruit.color}}"> -->
         <article>
             <h2>
                 {{ fruit.name }} - 
@@ -8,13 +10,16 @@
                     Ready to Eat
                 {% else %}
                     Not Ready to Eat
-                {% endif %}
+                {%endif%}
             </h2>
-            <h3>Color: {{ fruit.color }}</h3>
-            <a href="/fruits/{{ fruit.id }}/edit"><button>Edit</button></a>
-            <form action="/fruits/{{ fruit.id }}?_method=DELETE" method="POST">
-                <input type="submit" value="Delete Fruit">
-            </form>
+            <h3>{{ fruit.color }}</h3>
+            <div class="btn-group">
+
+                <a href="/fruits/{{ fruit.id }}/edit" class="btn btn-primary">Edit</a>
+                <form action="/fruits/{{ fruit._id }}?_method=DELETE" method="POST">
+                    <input type="submit" value="delete that froot" class="btn btn-danger">
+                </form>
+            </div>
         </article>
     </div>
 {% endblock %}
