--- a/views/layout.liquid
+++ b/views/layout.liquid
@@ -19,7 +19,8 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
-                    <a href="/fruits" class="nav-link text-light">Home</a>
+                    <a href="/fruits" class="nav-link text-light">All fruits</a>
+                    <a href="/fruits/mine" class="nav-link text-light">My fruits</a>
                     <a href="/fruits/new" class="nav-link text-light">New</a>
                     <a href="/user/logout" class="nav-link text-light">Log Out</a>
                 </div>
