--- a/views/fruits/show.liquid
+++ b/views/fruits/show.liquid
@@ -13,7 +13,7 @@
                 {%endif%}
             </h2>
             <h3>{{ fruit.color }}</h3>
-            {% if username == fruit.username %}
+            {% if fruit.owner == userId  %}
                 <div class="btn-group">
 
                     <a href="/fruits/{{ fruit.id }}/edit" class="btn btn-primary">Edit</a>
@@ -23,5 +23,30 @@
                 </div>
             {% endif %}
         </article>
+        <div class="col-md-6">
+            <form action="/comments/{{fruit.id}}" method="POST">
+                <fieldset>
+                    <legend>Add Comment</legend>
+                    <label class="form-label">Comment: </label>
+                    <input type="text" class="form-control" name="note" placeholder="enter comment here...">
+                </fieldset>
+                <input type="submit" class="btn btn-success" value="Add Comment">
+            </form>
+        </div>
+        <!-- we need an if statement -->
+        <!-- this will solve a potential problem -->
+        <!-- if the fruit has no comments, we wont even try to show any -->
+        {% if fruit.comments.length > 0%}
+            <!-- here we'll add our comment container -->
+            <div class="container-sm justify-content-center">
+                <div class="col-md-8 col-lg-6">
+                    <!-- here we need to loop over the comments -->
+                    <!-- for every comment render a comment.liquid block -->
+                    {% for comment in fruit.comments %}
+                        {% render '../comment.liquid', comment: comment, userId: userId, fruit: fruit %}
+                    {% endfor %}
+                </div>
+            </div>
+        {% endif %}
     </div>
 {% endblock %}
